# discogskit

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  cliff.toml  justfile  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: qa.yml  release.yml
benchmarks/: run.py  setup.py
src/discogskit/: _console.py  cli.py  decompress.py  pipeline.py
src/discogskit/entities/: __init__.py  _split.py  artists.py  labels.py  masters.py  releases.py
src/discogskit/writers/: __init__.py  _ipc.py  jsonl.py  parquet.py  postgresql.py  sqlite.py
tests/: conftest.py  test_artists.py  test_cli.py  test_ddl_postgresql.py  test_ddl_sqlite.py  test_decompress.py  test_entities.py  test_ipc.py  test_jsonl_writer.py  test_labels.py  test_masters.py  test_parquet_writer.py  test_pipeline.py  test_postgresql_writer.py  test_releases.py  test_split.py  test_sqlite_writer.py  test_writers_factory.py
